--- a/Views/Home/Chat.cshtml
+++ b/Views/Home/Chat.cshtml
@@ -10,6 +10,10 @@
         <div class="col-4"><input type="text" id="userInput" /></div>
     </div>
     <div class="row">
+        <div class="col-2">Prenume</div>
+        <div class="col-4"><input type="text" id="prenumeInput" /></div>
+    </div>
+    <div class="row">
         <div class="col-2">Message</div>
         <div class="col-4"><input type="text" id="messageInput" /></div>
     </div>
